# kouchou-ai-clustering-experiment

./: .gitignore  .gitmodules  README.md  pyproject.toml
data/experiment_outputs/20250415_プロンプト修正/: プロンプト変更後のラベリング結果.csv  プロンプト変更後の自動評価結果.csv
data/experiment_outputs/20250415_プロンプト修正_aipubcom/: プロンプト変更後のラベリング結果.csv  プロンプト変更後の自動評価結果.csv
data/experiment_outputs/20250415_プロンプト修正_rep-election-2/: プロンプト変更後のラベリング結果.csv  プロンプト変更後の自動評価結果.csv
data/experiment_outputs/20250415_ベースプロンプト/: プロンプト変更後のラベリング結果.csv  ベースプロンプトの自動評価結果.csv
data/experiment_outputs/20250415_ベースプロンプト_aipubcom/: プロンプト変更後のラベリング結果.csv  ベースプロンプトの自動評価結果.csv
data/experiment_outputs/20250415_ベースプロンプト_rep-election-2/: プロンプト変更後のラベリング結果.csv  ベースプロンプトの自動評価結果.csv
data/experiment_outputs/rep-election-2/: プロンプト変更後の自動評価結果.csv  ベースプロンプトの自動評価結果.csv
data/pubcom_inputs/: kankyou_pubcom.csv  kankyou_pubcom_augmented.csv
data/pubcom_outputs/20250421_パブコメ実験/: hierarchical_initial_labels.csv  クラスタタイトル.csv  クラスタリングラベル_20250421_パブコメ実験.csv
data/pubcom_outputs/20250421_大量投稿実験_augmented/: hierarchical_initial_labels.csv  クラスタタイトル.csv  クラスタリングラベル_20250421_大量投稿実験_augmented.csv
notebooks/: 20250415_aipubcom_プロンプト修正・自動評価.ipynb  20250415_aipubcom_ベースプロンプト・自動評価.ipynb  20250415_プロンプト修正・自動評価.ipynb  20250415_ベースプロンプト・自動評価.ipynb  20250421_大量投稿実験_クラスタリング.ipynb  20250421_大量投稿実験_データ生成.ipynb
