[project]
name = "kouchou-ai-clustering-experiment"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nasuka", email = "nsk.smn@gmail.com" }
]
dependencies = [
    "jupyter>=1.1.1",
    "openai>=1.71.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "janome>=0.5.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "umap-learn>=0.5.7",
    "numba>=0.59.0",
    "fire>=0.7.0",
    "pydantic>=2.11.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ka_experiment"]
